added meta tag for description
added meta tag for description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="HTML, CSS, BOOTSTRAP">
+  <meta name="description" content="Tindog project using BOOTSRAP,  HTML and CSS">
   <title>TinDog</title>
   <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
