added meta tag to refer information about author
added meta tag to refer information about author

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="HTML, CSS, BOOTSTRAP">
   <meta name="description" content="Tindog project using BOOTSRAP,  HTML and CSS">
+  <meta name="author" content="Divya Shahi">
   <title>TinDog</title>
   <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
